remove sidebar and fix header spacing

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -47,7 +47,7 @@ h6 {
 h2
 {
   font-size: $type-size-0;
-  line-height: $type-size-0;
+  line-height: 1em;
 }
 }
 
